Revert "Merge branch 'main' of https://github.com/Code-the-Change-YYC/code-the-change-yyc-site into feature/WEB-109-Fix-spacing-on-events-page"
This reverts commit 7e64b54d9aeca071735a96373fe4dc6101ae06f1, reversing
changes made to fcce7cffdb8434e60ac4fd358735fdcf0bbb7345.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,9 +74,3 @@
     right: 1.5rem;
   }
 }
-
-/* Alumni carousel specific styles */
-.alumni-carousel .swiper-button-prev,
-.alumni-carousel .swiper-button-next {
-  color: #000000;
-}
